# alphaminer

./: .gitignore  README.md  generate_source_code.py  generate_vercel_data.py  pyproject.toml  requirements.txt  run_alphas.py  run_new_alphas.py
alpha/: __init__.py  advanced_alphas.py  base_alpha.py  custom_alphas.py  elite_alphas.py  enhanced_alphas.py  innovative_alphas.py  momentum_alphas.py  new_alphas.py  next_gen_alphas.py  professional_alphas.py  quantum_alphas.py  simple_alphas.py  statistical_alphas.py
vercel-frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json
vercel-frontend/app/: globals.css  layout.tsx  page.tsx
vercel-frontend/app/components/: AlphaCard.tsx  AlphaChart.tsx  CodeViewer.tsx  PerformanceChart.tsx
vercel-frontend/app/components/ui/: badge.tsx  card.tsx  tabs.tsx
