[project]
name = "alphaminer"
version = "0.1.0"
description = "Alpha strategy backtesting and analysis framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.scripts]
run-alphas = "run_alphas:main"
generate-vercel-data = "generate_vercel_data:main"
generate-source-code = "generate_source_code:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alpha"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]
